--- a/cart.html
+++ b/cart.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basket</title>
-    <link rel="stylesheet" href="disain.css">
     <link rel="stylesheet" href="css\bootstrap.css">
     <script src="js/bootstrap.js"></script>
+    <link rel="stylesheet" href="disain.css">
 </head>
 <body>
     <div class="header">
         <div class="container">
-            <!-- Logo vasakul -->
             <div class="logo">
                 <a href="index.html">
                     <img src="images/soft-logo-png-transparent.png" alt="Diivanid logo">
                 </a>
             </div>
 
-            <!-- Navigatsioonimenüü keskel -->
             <div class="nav">
                 <a href="SofaProducts.html">Sofa Products</a>
                 <a href="BlogView.html">Blog View</a> 
@@ -26,17 +24,16 @@
                 <a href="LogIn.html">Log in</a>
             </div>
 
-            <!-- Ostukorvi ikoon paremal -->
             <div class="cart">
                 <a href="cart.html">
                     <img src="images/360_F_631788778_jbL4ZKDb5q1pQVst2lpEg7XFGKLpupBE.jpg" alt="Ostukorv">
                 </a>
             </div>
         </div>
-    </div> 
+    </div>
 
-    <div class="footer">
-        <div class="container">
+    <div class="footer mt-5">
+        <div class="container text-center">
             <p>© 2025 Diivanid OÜ. Kõik õigused kaitstud.</p>
         </div>
     </div>
