--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
     <link rel="stylesheet" href="disain.css">
 </head>
 <body>
-    <!-- Päis koos logoga ja ostukorviga -->
     <div class="header">
         <div class="container">
-            <!-- Logo vasakul -->
             <div class="logo">
                 <a href="index.html">
                     <img src="images/soft-logo-png-transparent.png" alt="Diivanid logo">
                 </a>
             </div>
 
-            <!-- Navigatsioonimenüü keskel -->
             <div class="nav">
                 <a href="SofaProducts.html">Sofa Products</a>
                 <a href="BlogView.html">Blog View</a> 
@@ -27,7 +24,6 @@
                 <a href="LogIn.html">Log in</a>
             </div>
 
-            <!-- Ostukorvi ikoon paremal -->
             <div class="cart">
                 <a href="cart.html">
                     <img src="images/360_F_631788778_jbL4ZKDb5q1pQVst2lpEg7XFGKLpupBE.jpg" alt="Ostukorv">
@@ -59,9 +55,8 @@
         </div>
     </div>
 
-    <!-- Jalus -->
-    <div class="footer">
-        <div class="container">
+    <div class="footer mt-5">
+        <div class="container text-center">
             <p>© 2025 Diivanid OÜ. Kõik õigused kaitstud.</p>
         </div>
     </div>
