--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css\bootstrap.css">
     <script src="js/bootstrap.js"></script>
     <link rel="stylesheet" href="disain.css">
     <style>
@@ -12,17 +12,16 @@
         .contact-section .container {
             display: flex;
             align-items: center;
-            justify-content: space-between; /* Logo vasakule, kontaktid paremale */
+            justify-content: space-between; 
             max-width: 1200px;
             margin: 0 auto;
         }
 
         .contact-section .logo img {
-            height: 80px; /* Sobiv suurus */
+            height: 80px; 
         }
 
-        /* Logo on nüüd veidi keskel */
-        .contact-section .logo {
+        .contact-section .logo { /* logo nihutan pisut keskele */
             flex-shrink: 0;
         }
 
@@ -41,7 +40,7 @@
         }
 
         .contact-info a {
-            color: #FFD700; /* Kuldne link */
+            color: #FFD700; 
             text-decoration: none;
             font-weight: bold;
         }
@@ -57,16 +56,33 @@
             height: 400px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin-top: 30px; /* Lisa natuke ruumi kaardi kohale */
+            margin-top: 30px; /* Lisab natuke ruumi kaardi kohale */
         }
 
         /* Footer all */
         .footer {
             text-align: center;
             padding: 20px 0;
-            background-color: #222;
+            background-color: #333;
             color: white;
             width: 100%;
+        }
+         /* Kaardikonteineri stiilid */
+        .map-container {
+            width: 80%; /* Kaardi konteineri laius */
+            max-width: 800px; /* Piiratud maksimaalne laius */
+            height: 450px; /* Kaardi kõrgus */
+            display: flex;
+            justify-content: center; /* Paigutab iframe'i horisontaalselt keskele */
+            align-items: center; /* Paigutab iframe'i vertikaalselt keskele */
+            margin: 0 auto; /* Keskendamine */
+        }
+
+        /* Iframe stiil, et kaart ei läheks liiga suureks ega liiga väikeseks */
+        .map-container iframe {
+            width: 100%; 
+            height: 100%; /* Iframe võtab kogu konteineri kõrgusest */
+            border: none; /* Eemaldab serva */
         }
     </style>
 </head>
@@ -74,14 +90,12 @@
 
     <div class="header">
         <div class="container">
-            <!-- Logo vasakul -->
             <div class="logo">
                 <a href="index.html">
                     <img src="images/soft-logo-png-transparent.png" alt="Diivanid logo">
                 </a>
             </div>
 
-            <!-- Navigatsioonimenüü keskel -->
             <div class="nav">
                 <a href="SofaProducts.html">Sofa Products</a>
                 <a href="BlogView.html">Blog View</a> 
@@ -89,7 +103,6 @@
                 <a href="LogIn.html">Log in</a>
             </div>
 
-            <!-- Ostukorvi ikoon paremal -->
             <div class="cart">
                 <a href="cart.html">
                     <img src="images/360_F_631788778_jbL4ZKDb5q1pQVst2lpEg7XFGKLpupBE.jpg" alt="Ostukorv">
@@ -101,9 +114,8 @@
     <!-- Kontaktide sektsioon -->
     <div class="contact-section">
         <div class="container">
-            <!-- Logo vasakul -->
-            <div class="logo">
-                <img src="images/soft-logo-png-transparent.png" alt="Diivanid logo">
+            <div class="map-container"> <!-- Google Maps API -->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2029.9114001353914!2d24.750063377571795!3d59.41787287465735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469294bc824d41a3%3A0xc358d7c8816bd4f!2sVeerenni%20tn%2051%2C%2010138%20Tallinn!5e0!3m2!1set!2see!4v1742936614932!5m2!1set!2see" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <!-- Kontaktinfo paremal -->
@@ -120,19 +132,12 @@
             </div>
         </div>
     </div>
-
-    <!-- Google Map -->
-    <div id="map"></div>
-
-    <!-- Google Maps API -->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2029.9114001353914!2d24.750063377571795!3d59.41787287465735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469294bc824d41a3%3A0xc358d7c8816bd4f!2sVeerenni%20tn%2051%2C%2010138%20Tallinn!5e0!3m2!1set!2see!4v1742936614932!5m2!1set!2see" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     
-
-    <div class="footer">
-        <div class="container">
+    <div class="footer mt-5">
+        <div class="container text-center">
             <p>© 2025 Diivanid OÜ. Kõik õigused kaitstud.</p>
         </div>
     </div>
 
 </body>
-</html> 
+</html>
