--- a/LogIn.html
+++ b/LogIn.html
@@ -4,34 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in</title>
-    <link rel="stylesheet" href="css\bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/bootstrap.js"></script>
-    <link rel="stylesheet" href="disain.css">
+    <link rel="stylesheet" href="./disain.css">
     <style>
-        /* Peidame vormi, mis ei ole valitud */
         .login-form, .register-form {
             display: none;
         }
         .active {
             display: block;
         }
-         /* Nuputüüpide stiil */
-         .ty-tablinks {
+        .ty-login-tabs {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+        .ty-tablinks {
             padding: 10px 20px;
-            margin: 5px;
             cursor: pointer;
             font-weight: bold;
             border-radius: 5px;
-            transition: background-color 0.3s ease, color 0.3s ease;
+            transition: background-color 0.3s ease;
         }
-
-        /* aktiivse nupu värv (lilla) */
         .ty-tablinks.active {
             background-color: #800080;
             color: white;
         }
-
-        /* Lilla nupud vormis */
         .btn-primary {
             background-color: #800080;
             border-color: #800080;
@@ -41,49 +40,30 @@
             background-color: #660066;
             border-color: #660066;
         }
-
-        /* Inputi stiil */
-        input {
-            margin-bottom: 10px;
-        }
-        /* Tagab, et footer jääb lehe alla */
         html, body {
             height: 100%;
             margin: 0;
             display: flex;
             flex-direction: column;
         }
-
         .container {
             flex: 1;
-        }
-
-        /* Logi sisse ja registreeri tabid kõrvuti */
-        .ty-login-tabs {
             display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 20px;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
         }
-
-        /* Vormide nähtavus */
         .login-form form, .register-form form {
             display: flex;
             flex-direction: column;
             align-items: center;
+            width: 100%;
+            max-width: 350px;
         }
-
-        .login-form form .mb-3, .register-form form .mb-3 {
-            width: 100%; 
-            max-width: 300px; 
+        h2 {
+            margin-bottom: 20px;
+            text-align: center;
         }
-
-        .login-form.active, .register-form.active {
-            display: block;
-            
-        }
-
-        /* Modal popup */
         .modal {
             display: none;
             position: fixed;
@@ -96,43 +76,46 @@
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
-
         .modal.show {
             display: block;
         }
-
-        /* Lilla nupud */
-        .ty-tablinks.active, .btn-primary {
-            background-color: #800080;
-            color: white;
-            font-weight: bold;
-            border: none;
+        .header .container {
+            display: flex;               
+            flex-direction: row;          /*kõik elemendid horisontaalselt */
+            align-items: center;          /* Kõik elemendid vertikaalselt tsentreeritud */
+            justify-content: space-between; /* Kõik elemendid paigutatakse servadele */
+            height: auto;                 
+            padding: 0px 20px;          
         }
 
-        .btn-primary:hover {
-            background-color: #660066;
+        .logo {
+            margin-right: 20px; /* Kaugus logo ja järgmise elemendi vahel */
         }
-        </style>
+
+        .nav {
+            margin-right: 20px; /* Kaugus nav'i ja järgmise elemendi vahel */
+        }
+
+        .cart {
+            margin-left: 20px;  /* Kaugus cart ja nav'i vahel */
+        }
+
+    </style>
 </head>
 <body>
     <div class="header">
         <div class="container">
-            <!-- Logo vasakul -->
             <div class="logo">
                 <a href="index.html">
                     <img src="images/soft-logo-png-transparent.png" alt="Diivanid logo">
                 </a>
             </div>
-
-            <!-- Navigatsioonimenüü keskel -->
             <div class="nav">
                 <a href="SofaProducts.html">Sofa Products</a>
                 <a href="BlogView.html">Blog View</a> 
                 <a href="Contact.html">Contact</a>
                 <a href="LogIn.html">Log in</a>
             </div>
-
-            <!-- Ostukorvi ikoon paremal -->
             <div class="cart">
                 <a href="cart.html">
                     <img src="images/360_F_631788778_jbL4ZKDb5q1pQVst2lpEg7XFGKLpupBE.jpg" alt="Ostukorv">
@@ -141,59 +124,59 @@
         </div>
     </div>
 
-
     <div class="container mt-5">
-        <!-- Logi sisse ja registreeri tabs -->
         <div class="ty-login-tabs text-center">
             <span class="ty-tablinks active" id="login" onclick="showLogin()">Logi sisse</span>
             <span class="ty-tablinks" id="register" onclick="showRegister()">Registreeri</span>
-            <div id="indicator"></div>
         </div>
 
-        <!-- Logi sisse vorm -->
         <div class="login-form active" id="loginForm">
             <h2>Logi sisse</h2>
-            <form>
+            <form id="loginFormElem">
                 <div class="mb-3">
                     <label for="email" class="form-label">E-mail</label>
-                    <input type="email" id="email" class="form-control" placeholder="E-mail">
+                    <input type="email" id="email" class="form-control" placeholder="E-mail" required>
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Parool</label>
-                    <input type="password" id="password" class="form-control" placeholder="Parool">
+                    <input type="password" id="password" class="form-control" placeholder="Parool" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Logi sisse</button>
             </form>
         </div>
 
-        <!-- Registreeri vorm -->
         <div class="register-form" id="registerForm">
             <h2>Registreeri</h2>
-            <form>
+            <form id="registerFormElem">
                 <div class="mb-3">
                     <label for="firstName" class="form-label">Eesnimi</label>
-                    <input type="text" id="firstName" class="form-control" placeholder="Eesnimi">
+                    <input type="text" id="firstName" class="form-control" placeholder="Eesnimi" required>
                 </div>
                 <div class="mb-3">
                     <label for="lastName" class="form-label">Perenimi</label>
-                    <input type="text" id="lastName" class="form-control" placeholder="Perenimi">
-                </div> 
+                    <input type="text" id="lastName" class="form-control" placeholder="Perenimi" required>
+                </div>
                 <div class="mb-3">
                     <label for="phoneNumber" class="form-label">Telefon</label>
-                    <input type="tel" id="phoneNumber" class="form-control" placeholder="Telefon" pattern="[0-9]{8}" title="Sisesta kehtiv telefoninumber">
+                    <input type="tel" id="phoneNumber" class="form-control" placeholder="Telefon" pattern="(+372) "> <!-- pattern="[0-9]{8}" saab määrata formati ehk mida kasutaja peab telefoni numbril sisestama-->
                 </div>
                 <div class="mb-3">
                     <label for="emailRegister" class="form-label">E-mail</label>
-                    <input type="email" id="emailRegister" class="form-control" placeholder="E-mail">
+                    <input type="email" id="emailRegister" class="form-control" placeholder="E-mail" required>
                 </div>
-               
                 <div class="mb-3">
                     <label for="passwordRegister" class="form-label">Parool</label>
-                    <input type="password" id="passwordRegister" class="form-control" placeholder="Parool">
+                    <input type="password" id="passwordRegister" class="form-control" placeholder="Parool" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Registreeri</button>
             </form>
         </div>
+
+        <div id="modal" class="modal">
+            <p id="modal-text"></p>
+            <button onclick="closeModal()">OK</button>
+        </div>
+    </div>
 
     <script>
         function showLogin() {
@@ -210,42 +193,30 @@
             document.getElementById('register').classList.add('active');
         }
 
-        // Näita teavitust (modal)
         function showModal(message) {
             document.getElementById('modal-text').innerText = message;
             document.getElementById('modal').classList.add('show');
         }
 
-        // Sulge teavitus
         function closeModal() {
             document.getElementById('modal').classList.remove('show');
         }
 
-        // Lisame sündmused, et kuvada modal pärast registreerimist/sisselogimist
-        document.querySelector('.login-form form').addEventListener('submit', function (e) {
+        document.getElementById('loginFormElem').addEventListener('submit', function (e) {
             e.preventDefault();
             showModal('Oled edukalt sisse loginud!');
         });
 
-        document.querySelector('.register-form form').addEventListener('submit', function (e) {
+        document.getElementById('registerFormElem').addEventListener('submit', function (e) {
             e.preventDefault();
             showModal('Oled edukalt registreeritud!');
         });
     </script>
 
-        <!-- Modal (teavituse popup) -->
-    <div id="modal" class="modal">
-        <p id="modal-text"></p>
-        <button onclick="closeModal()">OK</button>
+    <div class="footer mt-5">
+        <div class="container text-center">
+            <p>© 2025 Diivanid OÜ. Kõik õigused kaitstud.</p>
+        </div>
     </div>
-
-
-    <div class="main-content">
-        <!-- Siia läheb kogu ülejäänud sisu -->
-    </div>
-    <footer class="footer">
-        <p>© 2025 Diivanid OÜ. Kõik õigused kaitstud.</p>
-    </footer>
-
 </body>
 </html>
